manifests/mailpit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailpit
  labels:
    app.kubernetes.io/name: mail
    app.kubernetes.io/part-of: infra
