manifests/mailpit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app.kubernetes.io/name: mailpit
    app.kubernetes.io/part-of: infra
    app.kubernetes.io/component: web
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: mailpit
      app.kubernetes.io/part-of: infra
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailpit
        app.kubernetes.io/part-of: infra
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.30
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              protocol: TCP
              containerPort: 8025
            - name: smtp
              protocol: TCP
              containerPort: 1025
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
