manifests/mailpit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app.kubernetes.io/name: mailpit
    app.kubernetes.io/part-of: infra
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mailpit
    app.kubernetes.io/part-of: infra
    app.kubernetes.io/component: web
  ports:
    - name: web
      port: 8025
      targetPort: web
      protocol: TCP
    - name: smtp
      port: 1025
      targetPort: smtp
      protocol: TCP
