manifests/mailpit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app.kubernetes.io/name: mailpit
    app.kubernetes.io/part-of: infra
    app.kubernetes.io/component: web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - mailpit.k3s.home.verrve.ru
      secretName: mailpit-tls
  rules:
    - host: mailpit.k3s.home.verrve.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-http-redirect
  namespace: mailpit
  labels:
    app.kubernetes.io/name: mailpit
    app.kubernetes.io/part-of: infra
    app.kubernetes.io/component: web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: webs
    traefik.ingress.kubernetes.io/router.middlewares: mailpit-mailpit-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - mailpit.k3s.home.verrve.ru
      secretName: mailpit-tls
  rules:
    - host: mailpit.k3s.home.verrve.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  name: web
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailpit-smtp
  namespace: mailpit
  labels:
    app.kubernetes.io/name: mailpit
    app.kubernetes.io/part-of: infra
    app.kubernetes.io/component: web
spec:
  entryPoints:
    - smtp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailpit
          port: 1025
